# ownership-network-fragility

./: .gitignore  CITATION.cff  DATA_ACCESS.md  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: public_repo_audit.yml
configs/: 005_full_panel.yaml  006_baseline_signals.yaml  data.yaml  features.yaml  model_lgbm.yaml
docs/: github_release_checklist.md  index.md  methodology.md  model_card.md  reproducibility.md  results.md  robustness.md
docs/assets/interactive/: 006_baseline_signal_dashboard_20260529T225240Z.html  008_oos_ml_dashboard_20260529T232844Z.html  (+3 more)
scripts/: 001_smoke.py  002_build_schema_contract.py  003_pilot_extract_and_quality.py  004_pilot_panel_and_network.py  005_full_panel_network_scale.py  006_baseline_signal_tests.py  007_formal_econometrics.py  008_oos_ml_signal_models.py  009_portfolio_costs_and_factor_attribution.py  010_discover_wrds_schema.py  010_robustness_suite.py  011_public_repo_audit.py  020_validate_phase0.py  022_validate_schema_contract.py  023_validate_pilot_extract.py  024_validate_pilot_panel_network.py  025_validate_full_panel_network.py  026_validate_baseline_signal_tests.py  095_bundle_step005_logs.py  096_bundle_step004_logs.py  096_bundle_step006_logs.py  097_bundle_step003_logs.py  098_bundle_step002_logs.py  099_bundle_logs.py
src/ownership_fragility/: __init__.py
tests/: test_002_schema_contract.py  test_003_pilot_extract.py  test_004_pilot_panel_network.py  test_005_full_panel_network.py  test_006_baseline_signals.py  test_scaffold.py
tests/fixtures/: schema_contract_public.json
(+25 files in other folders)
